--- a/totp/src-tauri/Cargo.toml
+++ b/totp/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "totp"
 version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+description = "Open Source 2FA TOTP Authenticator"
+authors = ["RedIsGaming"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -11,9 +11,10 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = ["shell-open"] }
+tauri = { version = "1.5", features = [ "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+tauri-plugin-positioner = "1.0.4"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
