--- a/totp/package.json
+++ b/totp/package.json
@@ -21,6 +21,7 @@
     "postcss": "^8.4.35",
     "svelte": "^4.2.8",
     "svelte-check": "^3.4.6",
+    "svelte-navigator": "^3.2.2",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
