--- a/totp/package.json
+++ b/totp/package.json
@@ -14,6 +14,7 @@
     "@tauri-apps/api": "^1.5.2"
   },
   "devDependencies": {
+    "@iconify/svelte": "^3.1.6",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tauri-apps/cli": "^1.5.8",
     "@tsconfig/svelte": "^5.0.2",
