--- a/totp/.gitignore
+++ b/totp/.gitignore
@@ -1,22 +1,22 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
+# Local
+.DS_Store
 *.local
+*.log*
+logs
+*debug.log*
+yarn-error.log*
+dist-ssr
 
-# Editor directories and files
+# Dist
+node_modules
+dist/
+
+# IDE
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
+
+# Editor directories and files
 *.suo
 *.ntvs*
 *.njsproj
