--- a/totp/package.json
+++ b/totp/package.json
@@ -1,31 +1,29 @@
 {
-  "name": "totp",
+  "name": "totp2",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "dev": "rsbuild dev --open",
+    "build": "rsbuild build",
+    "preview": "rsbuild preview",
+    "svelte-check": "svelte-check --tsconfig ./tsconfig.json",
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.2"
+    "@tauri-apps/api": "^1.5.6",
+    "svelte": "^4.2.18"
   },
   "devDependencies": {
-    "@iconify/svelte": "^3.1.6",
-    "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@tauri-apps/cli": "^1.5.8",
-    "@tsconfig/svelte": "^5.0.2",
-    "autoprefixer": "^10.4.18",
-    "postcss": "^8.4.35",
-    "svelte": "^4.2.8",
-    "svelte-check": "^3.4.6",
+    "@iconify/svelte": "^4.0.2",
+    "@rsbuild/core": "^0.7.8",
+    "@rsbuild/plugin-svelte": "^0.7.8",
+    "@tauri-apps/cli": "^1.5.14",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "svelte-check": "^3.8.0",
     "svelte-navigator": "^3.2.2",
-    "tailwindcss": "^3.4.1",
-    "tslib": "^2.6.0",
-    "typescript": "^5.0.2",
-    "vite": "^5.0.0"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.4.2"
   }
 }
