--- a/totp/src-tauri/Cargo.toml
+++ b/totp/src-tauri/Cargo.toml
@@ -12,9 +12,10 @@ tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
 tauri = { version = "1.5", features = [ "shell-open"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
 tauri-plugin-positioner = "1.0.4"
+totp-rs = "5.5.1"
+base32 = "0.5.0"
+rand = "0.8.5"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
