--- a/totp/package.json
+++ b/totp/package.json
@@ -17,12 +17,13 @@
   "devDependencies": {
     "@biomejs/biome": "1.8.1",
     "@iconify/svelte": "^4.0.2",
-    "@rsbuild/core": "^0.7.8",
-    "@rsbuild/plugin-svelte": "^0.7.8",
+    "@rsbuild/core": "^0.7.9",
+    "@rsbuild/plugin-svelte": "^0.7.9",
     "@tauri-apps/cli": "^1.5.14",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
-    "svelte-check": "^3.8.0",
+    "rustywind": "^0.22.0",
+    "svelte-check": "^3.8.1",
     "svelte-navigator": "^3.2.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.2"
