--- a/totp/src-tauri/Cargo.toml
+++ b/totp/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "totp"
 version = "0.0.0"
-description = "Open Source 2FA TOTP Authenticator"
+description = "R-2FA - TOTP Authenticator"
 authors = ["RedIsGaming"]
 edition = "2021"
 
@@ -11,11 +11,10 @@ edition = "2021"
 tauri-build = { version = "1.5", features = [] }
 
 [dependencies]
-tauri = { version = "1.5", features = [ "shell-open"] }
+tauri = { version = "1.5", features = ["shell-open"] }
 tauri-plugin-positioner = "1.0.4"
-totp-rs = "5.5.1"
-base32 = "0.5.0"
-rand = "0.8.5"
+totp-rs = { version = "5.5.1", features = ["otpauth"] }
+dotenv = "0.15.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
