feat: DB support for Postgres added for dynamic token rendering instead

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
-ACCOUNT_NAME="YOUR_ACCOUNT_NAME"
-ISSUER="YOUR_ISSUER"
-SECRET="YOUR_SECRET"
+PGUSERNAME="YOUR_PGUSERNAME"
+PASSWORD="YOUR_PASSWORD"
+HOST="YOUR_HOST"
+PGDB="YOUR_PGDB"
