--- a/totp/src-tauri/Cargo.toml
+++ b/totp/src-tauri/Cargo.toml
@@ -15,6 +15,7 @@ tauri = { version = "1.5", features = ["shell-open"] }
 tauri-plugin-positioner = "1.0.4"
 totp-rs = { version = "5.5.1", features = ["otpauth"] }
 dotenv = "0.15.0"
+db = { path = "../db" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
