feat/refactor: Formatted and cleaned code, delete function added

--- a/totp/db/Cargo.toml
+++ b/totp/db/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 diesel = { version = "2.2.1", features = ["postgres"]}
 diesel_migrations = "2.2.0"
 dotenv = "0.15.0"
+serde = "1.0.203"
